--- a/elasticsearch/conf/elasticsearch.yml
+++ b/elasticsearch/conf/elasticsearch.yml
@@ -54,7 +54,7 @@ node.data: true
 #
 # Set the bind address to a specific IP (IPv4 or IPv6):
 #
-network.host: 0.0.0.0
+network.host: _site_
 #
 # Set a custom port for HTTP:
 #
